Updated Colors of Website

--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 .header{
     padding: 1rem;
     text-align: center;
-    background-color:  #016f32;
+    background-color:  #00e8cd;
     color: goldenrod;
 }
 
