Updated by Mesum

--- a/style.css
+++ b/style.css
@@ -7,8 +7,8 @@
 .header{
     padding: 1rem;
     text-align: center;
-    background-color:  #00e8cd;
-    color: goldenrod;
+    background-color:  #00e893d6;
+    color: rgb(0, 0, 0);
 }
 
 p{
